<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group_home">
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/story"
            android:title="@string/menu_stories" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/forum"
            android:title="@string/menu_forum" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_plasma">

        <item
            android:id="@+id/nav_donors"
            android:icon="@drawable/blood"
            android:title="@string/menu_donate" />

        <item
            android:id="@+id/nav_need"
            android:icon="@drawable/blood"
            android:title="@string/menu_need_plasma" />



    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_fund">
        <item
            android:id="@+id/nav_fund"
            android:icon="@drawable/user8"
            android:title="@string/menu_fund" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_Profile">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user8"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>




</menu>